--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Universal Declaration of Human Rights</h1>
-  <h2>Preamble</h2>
-  <p>Whereas recognition of the inherent dignity and of the equal and inalienable
+  <h1 class="declaration">Universal Declaration of Human Rights</h1>
+  <h2 class="head2">Preamble</h2>
+  <p class="parag">Whereas recognition of the inherent dignity and of the equal and inalienable
     rights of all members of the human family is the foundation of freedom, justice
     and peace in the world,<br>
     Whereas disregard and contempt for human rights have resulted in barbarous
@@ -42,44 +42,44 @@
     progressive measures, national and international, to secure their universal and
     effective recognition and observance, both among the peoples of Member States
     themselves and among the peoples of territories under their jurisdiction.</p>
-  <h2>Article 1</h2>
-  <p>All human beings are born free and equal in dignity and rights. They are
+  <h2 class="head2">Article 1</h2>
+  <p class="parag">All human beings are born free and equal in dignity and rights. They are
     endowed with reason and conscience and should act towards one another in a
     spirit of brotherhood.</p>
-  <h2>Article 2</h2>
-  <p>Everyone is entitled to all the rights and freedoms set forth in this Declaration,
+  <h2 class="head2">Article 2</h2>
+  <p class="parag">Everyone is entitled to all the rights and freedoms set forth in this Declaration,
     without distinction of any kind, such as race, colour, sex, language, religion,
     political or other opinion, national or social origin, property, birth or other status.
     Furthermore, no distinction shall be made on the basis of the political,
     jurisdictional or international status of the country or territory to which a person
     belongs, whether it be independent, trust, non-self-governing or under any other
     limitation of sovereignty.</p>
-  <h2>Article 3</h2>
-  <p>Everyone has the right to life, liberty and security of person.</p>
-  <h2>Article 4</h2>
-  <p>No one shall be held in slavery or servitude; slavery and the slave trade shall be
+  <h2 class="head2">Article 3</h2>
+  <p class="parag">Everyone has the right to life, liberty and security of person.</p>
+  <h2 class="head2">Article 4</h2>
+  <p class="parag">No one shall be held in slavery or servitude; slavery and the slave trade shall be
     prohibited in all their forms.</p>
-  <h2>Article 5</h2>
-  <p>No one shall be subjected to torture or to cruel, inhuman or degrading treatment
+  <h2 class="head2">Article 5</h2>
+  <p class="parag">No one shall be subjected to torture or to cruel, inhuman or degrading treatment
     or punishment.</p>
-  <h2>Article 6</h2>
-  <p>Everyone has the right to recognition everywhere as a person before the law.</p>
-  <h2>Article 7</h2>
-  <p>All are equal before the law and are entitled without any discrimination to equal
+  <h2 class="head2">Article 6</h2>
+  <p class="parag">Everyone has the right to recognition everywhere as a person before the law.</p>
+  <h2 class="head2">Article 7</h2>
+  <p class="parag">All are equal before the law and are entitled without any discrimination to equal
     protection of the law. All are entitled to equal protection against any
     discrimination in violation of this Declaration and against any incitement to such
     discrimination.</p>
-  <h2>Article 8</h2>
-  <p>Everyone has the right to an effective remedy by the competent national tribunals
+  <h2 class="head2">Article 8</h2>
+  <p class="parag">Everyone has the right to an effective remedy by the competent national tribunals
     for acts violating the fundamental rights granted him by the constitution or by law.</p>
-  <h2>Article 9</h2>
-  <p>No one shall be subjected to arbitrary arrest, detention or exile.</p>
-  <h2>Article 10</h2>
-  <p>Everyone is entitled in full equality to a fair and public hearing by an independent
+  <h2 class="head2">Article 9</h2>
+  <p class="parag">No one shall be subjected to arbitrary arrest, detention or exile.</p>
+  <h2 class="head2">Article 10</h2>
+  <p class="parag">Everyone is entitled in full equality to a fair and public hearing by an independent
     and impartial tribunal, in the determination of his rights and obligations and of any
     criminal charge against him.</p>
-  <h2>Article 11</h2>
-  <p>
+  <h2 class="head2">Article 11</h2>
+  <p class="parag">
     <ol>
       <li>Everyone charged with a penal offence has the right to be presumed
         innocent until proved guilty according to law in a public trial at which he
@@ -91,12 +91,12 @@
         offence was committed.</li>
     </ol>
   </p>
-  <h2>Article 12</h2>
-  <p>No one shall be subjected to arbitrary interference with his privacy, family, home
+  <h2 class="head2">Article 12</h2>
+  <p class="parag">No one shall be subjected to arbitrary interference with his privacy, family, home
     or correspondence, nor to attacks upon his honour and reputation. Everyone has
     the right to the protection of the law against such interference or attacks.</p>
-  <h2>Article 13</h2>
-  <p>
+  <h2 class="head2">Article 13</h2>
+  <p class="parag">
     <ol>
       <li>Everyone has the right to freedom of movement and residence within the
         borders of each State.</li>
@@ -104,8 +104,8 @@
         return to his country.</li>
     </ol>
   </p>
-  <h2>Article 14</h2>
-  <p>
+  <h2 class="head2">Article 14</h2>
+  <p class="parag">
     <ol>
       <li>Everyone has the right to seek and to enjoy in other countries asylum from
         persecution.</li>
@@ -114,16 +114,16 @@
         principles of the United Nations.</li>
     </ol>
   </p>
-  <h2>Article 15</h2>
-  <p>
+  <h2 class="head2">Article 15</h2>
+  <p class="parag">
     <ol>
       <li>Everyone has the right to a nationality.</li>
       <li>No one shall be arbitrarily deprived of his nationality nor denied the right to
         change his nationality.</li>
     </ol>
   </p>
-  <h2>Article 16</h2>
-  <p>
+  <h2 class="head2">Article 16</h2>
+  <p class="parag">
     <ol>
       <li>Men and women of full age, without any limitation due to race, nationality
         or religion, have the right to marry and to found a family. They are entitled
@@ -134,7 +134,7 @@
         entitled to protection by society and the State.</li>
     </ol>
   </p>
-  <h2><a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">Articles 17 to 30</a></h2>
+  <h2 class="head2"><a class="link" href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">Articles 17 to 30</a></h2>
 </body>
 </html>
 
